[package]
name = "hasm"
version = "0.1.0"
edition = "2021"
description = "Hack assembler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
indexmap = "1.7.0"
string-interner = "0.14.0"
tempfile = "3.2.0"
thiserror = "1.0.30"
